--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ before_install:
 - sfdx force:auth:jwt:grant --clientid $LWT_CONSUMERKEY --jwtkeyfile assets/server.key
   --username $LWT_USERNAME --setdefaultdevhubusername -a HubOrg
 script:
-- sfdx force:source:deploy -x ./manifest/package.xml
+- sfdx force:source:deploy -u $LWT_USERNAME -x ./manifest/package.xml -w 5
 - sfdx force:apex:test:run -u $LWT_USERNAME --wait 10
