--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -2,6 +2,7 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>Test</members>
+        <members>Test_test</members>
         <name>ApexClass</name>
     </types>
     <version>45.0</version>
