--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,6 @@ before_install:
 - cd ..
 
 script:
+- sfdxgp develop release ./manifest/
 - sfdx force:source:deploy -u $LWT_USERNAME -x ./manifest/package.xml -w 5
 - sfdx force:apex:test:run -u $LWT_USERNAME --wait 10
