--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,9 @@ before_install:
 - cd ..
 
 install:
-  - git fetch --depth=10000 --tags
+  - git clone https://github.com/$TRAVIS_REPO_SLUG.git $TRAVIS_REPO_SLUG
+  - cd $TRAVIS_REPO_SLUG
+  - git checkout -qf $TRAVIS_COMMIT
   - git checkout -t -b release origin/release
   - git checkout -t -b develop origin/develop
 
